@@ -1,7 +1,6 @@
 package net.vantage.report.pipeline;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.Callable;
 import java.util.concurrent.ExecutionException;
@@ -10,7 +9,6 @@ import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
 import java.util.concurrent.ThreadFactory;
 import java.util.concurrent.TimeUnit;
-import java.util.concurrent.atomic.AtomicInteger;
 
 import net.vantage.report.model.Invoice;
 import net.vantage.report.report.ReportRenderer;
@@ -35,36 +33,21 @@ public final class BatchRunner implements AutoCloseable {
 
     public BatchRunner(ReportRenderer renderer, int poolSize) {
         this.renderer = renderer;
-        this.executor = Executors.newFixedThreadPool(poolSize, new ThreadFactory() {
-
-            private final AtomicInteger counter = new AtomicInteger();
-
-            @Override
-            public Thread newThread(Runnable runnable) {
-                Thread thread = new Thread(runnable, "vantage-report-" + counter.incrementAndGet());
-                thread.setDaemon(true);
-                return thread;
-            }
-        });
+        ThreadFactory factory = Thread.ofPlatform()
+                .name("vantage-report-", 1)
+                .daemon()
+                .factory();
+        this.executor = Executors.newFixedThreadPool(poolSize, factory);
     }
 
     /** Renders every invoice, preserving input order. */
     public List<String> renderAll(List<Invoice> invoices) {
-        List<Future<String>> futures = new ArrayList<Future<String>>(invoices.size());
-        for (final Invoice invoice : invoices) {
-            futures.add(executor.submit(new Callable<String>() {
-                @Override
-                public String call() {
-                    return renderer.renderInvoice(invoice);
-                }
-            }));
+        List<Future<String>> futures = new ArrayList<>(invoices.size());
+        for (Invoice invoice : invoices) {
+            futures.add(executor.submit(() -> renderer.renderInvoice(invoice)));
         }
 
-        List<String> rendered = new ArrayList<String>(futures.size());
-        for (Future<String> future : futures) {
-            rendered.add(join(future));
-        }
-        return Collections.unmodifiableList(rendered);
+        return futures.stream().map(BatchRunner::join).toList();
     }
 
     private static String join(Future<String> future) {
@@ -75,11 +58,11 @@ public final class BatchRunner implements AutoCloseable {
             throw new IllegalStateException("interrupted while rendering invoice", e);
         } catch (ExecutionException e) {
             Throwable cause = e.getCause();
-            if (cause instanceof RuntimeException) {
-                throw (RuntimeException) cause;
+            if (cause instanceof RuntimeException runtime) {
+                throw runtime;
             }
-            if (cause instanceof Error) {
-                throw (Error) cause;
+            if (cause instanceof Error error) {
+                throw error;
             }
             throw new IllegalStateException("invoice rendering failed", cause);
         }
