@@ -4,11 +4,11 @@ import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Comparator;
-import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 import net.vantage.report.charge.Charge;
@@ -20,7 +20,6 @@ import net.vantage.report.model.Account;
 import net.vantage.report.model.Invoice;
 import net.vantage.report.model.UsageRecord;
 import net.vantage.report.util.Money;
-import net.vantage.report.util.Pair;
 
 /**
  * Rates mediated usage into invoices.
@@ -34,24 +33,16 @@ public final class RatingEngine {
     public static final BigDecimal OVERAGE_RATE_PER_MB = new BigDecimal("0.012");
     public static final long MB_PER_GB = 1024L;
 
-    private static final Map<String, BigDecimal> PLAN_FEES;
-
-    static {
-        Map<String, BigDecimal> fees = new HashMap<String, BigDecimal>();
-        fees.put("ENTERPRISE-FLEX", new BigDecimal("2400.00"));
-        fees.put("BUSINESS-FLEX", new BigDecimal("650.00"));
-        fees.put("METRO-BURST", new BigDecimal("310.00"));
-        PLAN_FEES = Collections.unmodifiableMap(fees);
-    }
+    private static final Map<String, BigDecimal> PLAN_FEES = Map.of(
+            "ENTERPRISE-FLEX", new BigDecimal("2400.00"),
+            "BUSINESS-FLEX", new BigDecimal("650.00"),
+            "METRO-BURST", new BigDecimal("310.00"));
 
     private final Map<String, Account> accountsById;
 
     public RatingEngine(List<Account> accounts) {
-        Map<String, Account> byId = new LinkedHashMap<String, Account>();
-        for (Account account : accounts) {
-            byId.put(account.getAccountId(), account);
-        }
-        this.accountsById = Collections.unmodifiableMap(byId);
+        this.accountsById = Collections.unmodifiableMap(accounts.stream().collect(Collectors.toMap(
+                Account::getAccountId, Function.identity(), (first, second) -> second, LinkedHashMap::new)));
     }
 
     public long overageMb(long usageMb, int includedGb) {
@@ -75,34 +66,23 @@ public final class RatingEngine {
 
     /** Sums usage per account, dropping records that have no billing account. */
     public Map<String, Long> mediate(List<UsageRecord> records) {
-        Map<String, Long> totals = new LinkedHashMap<String, Long>();
+        Map<String, Long> totals = new LinkedHashMap<>();
         for (UsageRecord record : records) {
             if (!accountsById.containsKey(record.getAccountId())) {
                 continue;
             }
-            Long current = totals.get(record.getAccountId());
-            long updated = (current == null ? 0L : current.longValue()) + record.getUsageMb();
-            totals.put(record.getAccountId(), Long.valueOf(updated));
+            totals.merge(record.getAccountId(), record.getUsageMb(), Long::sum);
         }
         return totals;
     }
 
     /** Usage that could not be attached to any account, newest first. */
     public List<UsageRecord> unlinked(List<UsageRecord> records) {
-        List<UsageRecord> orphans = records.stream()
+        return records.stream()
                 .filter(record -> !accountsById.containsKey(record.getAccountId()))
-                .collect(Collectors.toList());
-        Collections.sort(orphans, new Comparator<UsageRecord>() {
-            @Override
-            public int compare(UsageRecord left, UsageRecord right) {
-                int byPeriod = right.getPeriod().compareTo(left.getPeriod());
-                if (byPeriod != 0) {
-                    return byPeriod;
-                }
-                return left.getAccountId().compareTo(right.getAccountId());
-            }
-        });
-        return orphans;
+                .sorted(Comparator.comparing(UsageRecord::getPeriod, Comparator.reverseOrder())
+                        .thenComparing(UsageRecord::getAccountId))
+                .toList();
     }
 
     public Optional<Account> findAccount(String accountId) {
@@ -113,7 +93,7 @@ public final class RatingEngine {
         Account account = findAccount(accountId)
                 .orElseThrow(() -> new IllegalArgumentException("no such account: " + accountId));
 
-        List<Charge> charges = new ArrayList<Charge>();
+        List<Charge> charges = new ArrayList<>();
         charges.add(new PlanFeeCharge(account.getPlanCode(), planFee(account.getPlanCode())));
 
         long overage = overageMb(usageMb, account.getIncludedGb());
@@ -143,21 +123,9 @@ public final class RatingEngine {
 
     /** Invoices for every account with mediated usage, ordered by account id. */
     public List<Invoice> buildInvoices(String period, List<UsageRecord> records) {
-        Map<String, Long> totals = mediate(records);
-        List<Pair<String, Long>> ordered = totals.entrySet().stream()
-                .map(entry -> Pair.of(entry.getKey(), entry.getValue()))
-                .sorted(new Comparator<Pair<String, Long>>() {
-                    @Override
-                    public int compare(Pair<String, Long> left, Pair<String, Long> right) {
-                        return left.getFirst().compareTo(right.getFirst());
-                    }
-                })
-                .collect(Collectors.toList());
-
-        List<Invoice> invoices = new ArrayList<Invoice>();
-        for (Pair<String, Long> entry : ordered) {
-            invoices.add(buildInvoice(entry.getFirst(), period, entry.getSecond().longValue()));
-        }
-        return Collections.unmodifiableList(invoices);
+        return mediate(records).entrySet().stream()
+                .sorted(Map.Entry.comparingByKey())
+                .map(entry -> buildInvoice(entry.getKey(), period, entry.getValue()))
+                .toList();
     }
 }
